--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 **/.DS_Store
 /*.sublime-project
 /*.sublime-workspace
-/www/projects/**/img/*
+/www/projects/**/img/*.jpg
+/www/projects/**/img/*.jpeg
+/www/projects/**/img/*.gif
+/www/projects/**/img/*.png
