--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 **/.DS_Store
 /*.sublime-project
 /*.sublime-workspace
+/*.psd
+/*.sketch
+/*.png
 /www/projects/**/img/
 /www/img/
 site mock up.png
