--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,15 @@
 /*.sublime-project
 /*.sublime-workspace
 /designs
-
 /www/img
-
 /www/projects/**/img
-/www/projects/**/*.mov
-/www/projects/**/*.mp4
-/www/projects/**/*.m4a
-
+**/*.mov
+**/*.mp4
+**/*.m4a
+**/*.pdf
+**/*.png
+**/*.jpg
+**/*.jpeg
 
 
 
